--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-streamlit>=1.0.0
-joblib>=1.2.0
-scikit-learn>=1.0.2
-sklearn-crfsuite>=0.3.6
-matplotlib>=3.5.0
-seaborn>=0.11.2
-numpy>=1.21.0
-plotly>=5.0.0
-
+streamlit
+joblib
+requests
+numpy
+matplotlib
+seaborn
+scikit-learn
+pythainlp
+deepcut
+Counter
+sklearn-crfsuite
+plotly
